2010-12-24 Fri  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage--info-mode-completions-status): Rename.
	(epackage--info-mode-completions-license): Rename.
	(epackage--info-mode-completions-current): Rename.
	(epackage-info-mode-pcomplete-list): New.
	(epackage-info-mode-set-variables): add `tab-stop-list'.
	(epackage-info-mode-tab): Improve handling of 'Description:'.

2010-12-23 Thu  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el (epackage-cmd-upgrade-all-packages): Delay
	`epackage--install-action-list' action "boot" until end.
	(epackage-mail-buffer-name): New.
	(epackage-info-mode-cmd-email-maintainer): New.
	(epackage-info-mode-cmd-email-upstream): New.
	(package-info-mode-status-completions): New.
	(epackage-info-mode-pcomplete-arguments): New.
	(epackage-info-mode-pcomplete-default-completion): New.
	(epackage-info-mode-pcomplete-variables): New.
	(epackage-field-name): New.
	(package-info-mode-current-completions): New.
	(epackage-info-mode-tab): New.

2010-12-22 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (Project details, References): Add ripdoc, t2html.

	* Makefile (clean, install): adjust documentation strings.

	* epackage.el
	(top level): Don't require autorevert.el, forward declare its
	variables. Add autoload for `mail-setup'.
	(epackage-turn-on-auto-revert-mode): Check
	variables with `boundp'.
	(epackage-depends-parse-string): Correct variable name.
	(epackage-git-status-data): Correct variable name.
	(epackage-combine-files): Adjust message.
	(epackage-pkg-depends-verify-emacs): Add `version' to let.
	(epackage-pkg-depends-satisfy): Correct input args.
	(epackage-config-delete-file): Add arg `verbose'.
	(epackage-config-delete-action): Pass `verbose' forward.
	(epackage-pkg-lint-directory): Correct variable.
	(epackage-cmd-upgrade-package): Add missing arg for `message'.
	(epackage-pkg-lint-downloaded-git-url): Correct function call.
	(epackage-cmd-download-action-lint-on): Correct function call.